Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DBL_QT
    DIVIDE_EQ
    ENTER
    EXIT
    FALSE
    LENGTH
    LIST
    MINUS_EQ
    MOD
    NULL_TYPE
    PLUS_EQ
    PRINT
    SCAN
    SINGLE_QT
    TIMES_EQ
    TRUE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func prog
Rule 2     prog -> empty
Rule 3     func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
Rule 4     func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON
Rule 5     stmt -> expr SEMI_COLON
Rule 6     stmt -> defvar SEMI_COLON
Rule 7     stmt -> func
Rule 8     stmt -> IF LBRACKET expr RBRACKET stmt
Rule 9     stmt -> IF LBRACKET expr RBRACKET stmt ELSE stmt
Rule 10    stmt -> WHILE_LOOP LBRACKET expr RBRACKET stmt
Rule 11    stmt -> DO stmt WHILE_LOOP LBRACKET expr RBRACKET SEMI_COLON
Rule 12    stmt -> FOR_LOOP LPAREN IDENTIFIER ASSIGN expr TO expr RPAREN stmt
Rule 13    stmt -> BEGIN body END
Rule 14    stmt -> RETURN expr SEMI_COLON
Rule 15    expr -> expr LBRACKET expr RBRACKET
Rule 16    expr -> LBRACKET clist RBRACKET
Rule 17    expr -> expr QUESTION_MARK expr COLON expr
Rule 18    expr -> expr PLUS expr
Rule 19    expr -> expr MINUS expr
Rule 20    expr -> expr TIMES expr
Rule 21    expr -> expr DIVIDE expr
Rule 22    expr -> expr GREATER_THAN expr
Rule 23    expr -> expr LESS_THAN expr
Rule 24    expr -> expr EQUAL expr
Rule 25    expr -> expr GREATER_THAN_EQUAL expr
Rule 26    expr -> expr LESS_THAN_EQUAL expr
Rule 27    expr -> expr NOT_EQUAL expr
Rule 28    expr -> expr OR expr
Rule 29    expr -> expr AND expr
Rule 30    expr -> NOT expr
Rule 31    expr -> PLUS expr
Rule 32    expr -> MINUS expr
Rule 33    expr -> IDENTIFIER
Rule 34    expr -> IDENTIFIER ASSIGN expr
Rule 35    expr -> IDENTIFIER LPAREN clist RPAREN
Rule 36    expr -> NUMBER
Rule 37    flist -> empty
Rule 38    flist -> param_decl
Rule 39    flist -> param_decl COMMA flist
Rule 40    clist -> expr
Rule 41    clist -> expr COMMA clist
Rule 42    param_decl -> IDENTIFIER AS type
Rule 43    type -> INT_TYPE
Rule 44    type -> STR_TYPE
Rule 45    type -> VECTOR_TYPE
Rule 46    type -> BOOL_TYPE
Rule 47    body -> statement_list
Rule 48    statement_list -> statement
Rule 49    statement_list -> statement statement_list
Rule 50    statement -> expr SEMI_COLON
Rule 51    statement -> defvar SEMI_COLON
Rule 52    statement -> func
Rule 53    statement -> RETURN expr SEMI_COLON
Rule 54    statement -> IF LBRACKET expr RBRACKET stmt
Rule 55    statement -> IF LBRACKET expr RBRACKET stmt ELSE stmt
Rule 56    statement -> WHILE_LOOP LBRACKET expr RBRACKET stmt
Rule 57    statement -> DO stmt WHILE_LOOP LBRACKET expr RBRACKET SEMI_COLON
Rule 58    statement -> FOR_LOOP LPAREN IDENTIFIER ASSIGN expr TO expr RPAREN stmt
Rule 59    statement -> BEGIN body END
Rule 60    defvar -> IDENTIFIER DBL_COLON type
Rule 61    defvar -> IDENTIFIER DBL_COLON type ASSIGN expr
Rule 62    empty -> <empty>

Terminals, with rules where they appear

AND                  : 29
ARROW                : 4
AS                   : 42
ASSIGN               : 12 34 58 61
BEGIN                : 13 59
BOOL_TYPE            : 46
COLON                : 17
COMMA                : 39 41
COMMENT              : 
DBL_COLON            : 60 61
DBL_QT               : 
DIVIDE               : 21
DIVIDE_EQ            : 
DO                   : 11 57
ELSE                 : 9 55
END                  : 13 59
ENTER                : 
EQUAL                : 24
EXIT                 : 
FALSE                : 
FN                   : 3 4
FOR_LOOP             : 12 58
GREATER_THAN         : 3 4 22
GREATER_THAN_EQUAL   : 25
IDENTIFIER           : 3 4 12 33 34 35 42 58 60 61
IF                   : 8 9 54 55
INT_TYPE             : 43
LBRACKET             : 8 9 10 11 15 16 54 55 56 57
LCURLYBR             : 3
LENGTH               : 
LESS_THAN            : 3 4 23
LESS_THAN_EQUAL      : 26
LIST                 : 
LPAREN               : 3 4 12 35 58
MINUS                : 19 32
MINUS_EQ             : 
MOD                  : 
NOT                  : 30
NOT_EQUAL            : 27
NULL_TYPE            : 
NUMBER               : 36
OR                   : 28
PLUS                 : 18 31
PLUS_EQ              : 
PRINT                : 
QUESTION_MARK        : 17
RBRACKET             : 8 9 10 11 15 16 54 55 56 57
RCURLYBR             : 3
RETURN               : 4 14 53
RPAREN               : 3 4 12 35 58
SCAN                 : 
SEMI_COLON           : 4 5 6 11 14 50 51 53 57
SINGLE_QT            : 
STR_TYPE             : 44
TIMES                : 20
TIMES_EQ             : 
TO                   : 12 58
TRUE                 : 
VECTOR_TYPE          : 45
WHILE_LOOP           : 10 11 56 57
error                : 

Nonterminals, with rules where they appear

body                 : 3 13 59
clist                : 16 35 41
defvar               : 6 51
empty                : 2 37
expr                 : 4 5 8 9 10 11 12 12 14 15 15 17 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 34 40 41 50 53 54 55 56 57 58 58 61
flist                : 3 4 39
func                 : 1 7 52
param_decl           : 38 39
prog                 : 1 0
statement            : 48 49
statement_list       : 47 49
stmt                 : 8 9 9 10 11 12 54 55 55 56 57 58
type                 : 3 4 42 60 61

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . func prog
    (2) prog -> . empty
    (3) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON
    (62) empty -> .

    FN              shift and go to state 4
    $end            reduce using rule 62 (empty -> .)

    prog                           shift and go to state 1
    func                           shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func . prog
    (1) prog -> . func prog
    (2) prog -> . empty
    (3) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON
    (62) empty -> .

    FN              shift and go to state 4
    $end            reduce using rule 62 (empty -> .)

    func                           shift and go to state 2
    prog                           shift and go to state 5
    empty                          shift and go to state 3

state 3

    (2) prog -> empty .

    $end            reduce using rule 2 (prog -> empty .)


state 4

    (3) func -> FN . IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN . IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON

    IDENTIFIER      shift and go to state 6


state 5

    (1) prog -> func prog .

    $end            reduce using rule 1 (prog -> func prog .)


state 6

    (3) func -> FN IDENTIFIER . LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER . LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON

    LPAREN          shift and go to state 7


state 7

    (3) func -> FN IDENTIFIER LPAREN . flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER LPAREN . flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON
    (37) flist -> . empty
    (38) flist -> . param_decl
    (39) flist -> . param_decl COMMA flist
    (62) empty -> .
    (42) param_decl -> . IDENTIFIER AS type

    RPAREN          reduce using rule 62 (empty -> .)
    IDENTIFIER      shift and go to state 8

    flist                          shift and go to state 9
    empty                          shift and go to state 10
    param_decl                     shift and go to state 11

state 8

    (42) param_decl -> IDENTIFIER . AS type

    AS              shift and go to state 12


state 9

    (3) func -> FN IDENTIFIER LPAREN flist . RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER LPAREN flist . RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON

    RPAREN          shift and go to state 13


state 10

    (37) flist -> empty .

    RPAREN          reduce using rule 37 (flist -> empty .)


state 11

    (38) flist -> param_decl .
    (39) flist -> param_decl . COMMA flist

    RPAREN          reduce using rule 38 (flist -> param_decl .)
    COMMA           shift and go to state 14


state 12

    (42) param_decl -> IDENTIFIER AS . type
    (43) type -> . INT_TYPE
    (44) type -> . STR_TYPE
    (45) type -> . VECTOR_TYPE
    (46) type -> . BOOL_TYPE

    INT_TYPE        shift and go to state 16
    STR_TYPE        shift and go to state 17
    VECTOR_TYPE     shift and go to state 18
    BOOL_TYPE       shift and go to state 19

    type                           shift and go to state 15

state 13

    (3) func -> FN IDENTIFIER LPAREN flist RPAREN . LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER LPAREN flist RPAREN . LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON

    LESS_THAN       shift and go to state 20


state 14

    (39) flist -> param_decl COMMA . flist
    (37) flist -> . empty
    (38) flist -> . param_decl
    (39) flist -> . param_decl COMMA flist
    (62) empty -> .
    (42) param_decl -> . IDENTIFIER AS type

    RPAREN          reduce using rule 62 (empty -> .)
    IDENTIFIER      shift and go to state 8

    param_decl                     shift and go to state 11
    flist                          shift and go to state 21
    empty                          shift and go to state 10

state 15

    (42) param_decl -> IDENTIFIER AS type .

    COMMA           reduce using rule 42 (param_decl -> IDENTIFIER AS type .)
    RPAREN          reduce using rule 42 (param_decl -> IDENTIFIER AS type .)


state 16

    (43) type -> INT_TYPE .

    COMMA           reduce using rule 43 (type -> INT_TYPE .)
    RPAREN          reduce using rule 43 (type -> INT_TYPE .)
    GREATER_THAN    reduce using rule 43 (type -> INT_TYPE .)
    ASSIGN          reduce using rule 43 (type -> INT_TYPE .)
    SEMI_COLON      reduce using rule 43 (type -> INT_TYPE .)


state 17

    (44) type -> STR_TYPE .

    COMMA           reduce using rule 44 (type -> STR_TYPE .)
    RPAREN          reduce using rule 44 (type -> STR_TYPE .)
    GREATER_THAN    reduce using rule 44 (type -> STR_TYPE .)
    ASSIGN          reduce using rule 44 (type -> STR_TYPE .)
    SEMI_COLON      reduce using rule 44 (type -> STR_TYPE .)


state 18

    (45) type -> VECTOR_TYPE .

    COMMA           reduce using rule 45 (type -> VECTOR_TYPE .)
    RPAREN          reduce using rule 45 (type -> VECTOR_TYPE .)
    GREATER_THAN    reduce using rule 45 (type -> VECTOR_TYPE .)
    ASSIGN          reduce using rule 45 (type -> VECTOR_TYPE .)
    SEMI_COLON      reduce using rule 45 (type -> VECTOR_TYPE .)


state 19

    (46) type -> BOOL_TYPE .

    COMMA           reduce using rule 46 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 46 (type -> BOOL_TYPE .)
    GREATER_THAN    reduce using rule 46 (type -> BOOL_TYPE .)
    ASSIGN          reduce using rule 46 (type -> BOOL_TYPE .)
    SEMI_COLON      reduce using rule 46 (type -> BOOL_TYPE .)


state 20

    (3) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN . type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN . type GREATER_THAN ARROW RETURN expr SEMI_COLON
    (43) type -> . INT_TYPE
    (44) type -> . STR_TYPE
    (45) type -> . VECTOR_TYPE
    (46) type -> . BOOL_TYPE

    INT_TYPE        shift and go to state 16
    STR_TYPE        shift and go to state 17
    VECTOR_TYPE     shift and go to state 18
    BOOL_TYPE       shift and go to state 19

    type                           shift and go to state 22

state 21

    (39) flist -> param_decl COMMA flist .

    RPAREN          reduce using rule 39 (flist -> param_decl COMMA flist .)


state 22

    (3) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type . GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type . GREATER_THAN ARROW RETURN expr SEMI_COLON

    GREATER_THAN    shift and go to state 23


state 23

    (3) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN . LCURLYBR body RCURLYBR
    (4) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN . ARROW RETURN expr SEMI_COLON

    LCURLYBR        shift and go to state 24
    ARROW           shift and go to state 25


state 24

    (3) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR . body RCURLYBR
    (47) body -> . statement_list
    (48) statement_list -> . statement
    (49) statement_list -> . statement statement_list
    (50) statement -> . expr SEMI_COLON
    (51) statement -> . defvar SEMI_COLON
    (52) statement -> . func
    (53) statement -> . RETURN expr SEMI_COLON
    (54) statement -> . IF LBRACKET expr RBRACKET stmt
    (55) statement -> . IF LBRACKET expr RBRACKET stmt ELSE stmt
    (56) statement -> . WHILE_LOOP LBRACKET expr RBRACKET stmt
    (57) statement -> . DO stmt WHILE_LOOP LBRACKET expr RBRACKET SEMI_COLON
    (58) statement -> . FOR_LOOP LPAREN IDENTIFIER ASSIGN expr TO expr RPAREN stmt
    (59) statement -> . BEGIN body END
    (15) expr -> . expr LBRACKET expr RBRACKET
    (16) expr -> . LBRACKET clist RBRACKET
    (17) expr -> . expr QUESTION_MARK expr COLON expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GREATER_THAN expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr EQUAL expr
    (25) expr -> . expr GREATER_THAN_EQUAL expr
    (26) expr -> . expr LESS_THAN_EQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . PLUS expr
    (32) expr -> . MINUS expr
    (33) expr -> . IDENTIFIER
    (34) expr -> . IDENTIFIER ASSIGN expr
    (35) expr -> . IDENTIFIER LPAREN clist RPAREN
    (36) expr -> . NUMBER
    (60) defvar -> . IDENTIFIER DBL_COLON type
    (61) defvar -> . IDENTIFIER DBL_COLON type ASSIGN expr
    (3) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON

    RETURN          shift and go to state 33
    IF              shift and go to state 34
    WHILE_LOOP      shift and go to state 36
    DO              shift and go to state 37
    FOR_LOOP        shift and go to state 38
    BEGIN           shift and go to state 39
    LBRACKET        shift and go to state 35
    NOT             shift and go to state 42
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    IDENTIFIER      shift and go to state 26
    NUMBER          shift and go to state 43
    FN              shift and go to state 4

    body                           shift and go to state 27
    statement_list                 shift and go to state 28
    statement                      shift and go to state 29
    expr                           shift and go to state 30
    defvar                         shift and go to state 31
    func                           shift and go to state 32

state 25

    (4) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW . RETURN expr SEMI_COLON

    RETURN          shift and go to state 44


state 26

    (33) expr -> IDENTIFIER .
    (34) expr -> IDENTIFIER . ASSIGN expr
    (35) expr -> IDENTIFIER . LPAREN clist RPAREN
    (60) defvar -> IDENTIFIER . DBL_COLON type
    (61) defvar -> IDENTIFIER . DBL_COLON type ASSIGN expr

    SEMI_COLON      reduce using rule 33 (expr -> IDENTIFIER .)
    LBRACKET        reduce using rule 33 (expr -> IDENTIFIER .)
    QUESTION_MARK   reduce using rule 33 (expr -> IDENTIFIER .)
    PLUS            reduce using rule 33 (expr -> IDENTIFIER .)
    MINUS           reduce using rule 33 (expr -> IDENTIFIER .)
    TIMES           reduce using rule 33 (expr -> IDENTIFIER .)
    DIVIDE          reduce using rule 33 (expr -> IDENTIFIER .)
    GREATER_THAN    reduce using rule 33 (expr -> IDENTIFIER .)
    LESS_THAN       reduce using rule 33 (expr -> IDENTIFIER .)
    EQUAL           reduce using rule 33 (expr -> IDENTIFIER .)
    GREATER_THAN_EQUAL reduce using rule 33 (expr -> IDENTIFIER .)
    LESS_THAN_EQUAL reduce using rule 33 (expr -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 33 (expr -> IDENTIFIER .)
    OR              reduce using rule 33 (expr -> IDENTIFIER .)
    AND             reduce using rule 33 (expr -> IDENTIFIER .)
    ASSIGN          shift and go to state 45
    LPAREN          shift and go to state 46
    DBL_COLON       shift and go to state 47


state 27

    (3) func -> FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body . RCURLYBR

    RCURLYBR        shift and go to state 48


state 28

    (47) body -> statement_list .

    RCURLYBR        reduce using rule 47 (body -> statement_list .)
    END             reduce using rule 47 (body -> statement_list .)


state 29

    (48) statement_list -> statement .
    (49) statement_list -> statement . statement_list
    (48) statement_list -> . statement
    (49) statement_list -> . statement statement_list
    (50) statement -> . expr SEMI_COLON
    (51) statement -> . defvar SEMI_COLON
    (52) statement -> . func
    (53) statement -> . RETURN expr SEMI_COLON
    (54) statement -> . IF LBRACKET expr RBRACKET stmt
    (55) statement -> . IF LBRACKET expr RBRACKET stmt ELSE stmt
    (56) statement -> . WHILE_LOOP LBRACKET expr RBRACKET stmt
    (57) statement -> . DO stmt WHILE_LOOP LBRACKET expr RBRACKET SEMI_COLON
    (58) statement -> . FOR_LOOP LPAREN IDENTIFIER ASSIGN expr TO expr RPAREN stmt
    (59) statement -> . BEGIN body END
    (15) expr -> . expr LBRACKET expr RBRACKET
    (16) expr -> . LBRACKET clist RBRACKET
    (17) expr -> . expr QUESTION_MARK expr COLON expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GREATER_THAN expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr EQUAL expr
    (25) expr -> . expr GREATER_THAN_EQUAL expr
    (26) expr -> . expr LESS_THAN_EQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . PLUS expr
    (32) expr -> . MINUS expr
    (33) expr -> . IDENTIFIER
    (34) expr -> . IDENTIFIER ASSIGN expr
    (35) expr -> . IDENTIFIER LPAREN clist RPAREN
    (36) expr -> . NUMBER
    (60) defvar -> . IDENTIFIER DBL_COLON type
    (61) defvar -> . IDENTIFIER DBL_COLON type ASSIGN expr
    (3) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYBR body RCURLYBR
    (4) func -> . FN IDENTIFIER LPAREN flist RPAREN LESS_THAN type GREATER_THAN ARROW RETURN expr SEMI_COLON

    RCURLYBR        reduce using rule 48 (statement_list -> statement .)
    END             reduce using rule 48 (statement_list -> statement .)
    RETURN          shift and go to state 33
    IF              shift and go to state 34
    WHILE_LOOP      shift and go to state 36
    DO              shift and go to state 37
    FOR_LOOP        shift and go to state 38
    BEGIN           shift and go to state 39
    LBRACKET        shift and go to state 35
    NOT             shift and go to state 42
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    IDENTIFIER      shift and go to state 26
    NUMBER          shift and go to state 43
    FN              shift and go to state 4

    statement                      shift and go to state 29
    statement_list                 shift and go to state 49
    expr                           shift and go to state 30
    defvar                         shift and go to state 31
    func                           shift and go to state 32

state 30

    (50) statement -> expr . SEMI_COLON
    (15) expr -> expr . LBRACKET expr RBRACKET
    (17) expr -> expr . QUESTION_MARK expr COLON expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (22) expr -> expr . GREATER_THAN expr
    (23) expr -> expr . LESS_THAN expr
    (24) expr -> expr . EQUAL expr
    (25) expr -> expr . GREATER_THAN_EQUAL expr
    (26) expr -> expr . LESS_THAN_EQUAL expr
    (27) expr -> expr . NOT_EQUAL expr
    (28) expr -> expr . OR expr
    (29) expr -> expr . AND expr

    SEMI_COLON      shift and go to state 50
    LBRACKET        shift and go to state 51
    QUESTION_MARK   shift and go to state 52
    PLUS            shift and go to state 53
    MINUS           shift and go to state 54
    TIMES           shift and go to state 55
    DIVIDE          shift and go to state 56
    GREATER_THAN    shift and go to state 57
    LESS_THAN       shift and go to state 58
    EQUAL           shift and go to state 59
    GREATER_THAN_EQUAL shift and go to state 60
    LESS_THAN_EQUAL shift and go to state 61
    NOT_EQUAL       shift and go to state 62
    OR              shift and go to state 63
    AND             shift and go to state 64


state 31

    (51) statement -> defvar . SEMI_COLON

    SEMI_COLON      shift and go to state 65


state 32

    (52) statement -> func .

    RETURN          reduce using rule 52 (statement -> func .)
    IF              reduce using rule 52 (statement -> func .)
    WHILE_LOOP      reduce using rule 52 (statement -> func .)
    DO              reduce using rule 52 (statement -> func .)
    FOR_LOOP        reduce using rule 52 (statement -> func .)
    BEGIN           reduce using rule 52 (statement -> func .)
    LBRACKET        reduce using rule 52 (statement -> func .)
    NOT             reduce using rule 52 (statement -> func .)
    PLUS            reduce using rule 52 (statement -> func .)
    MINUS           reduce using rule 52 (statement -> func .)
    IDENTIFIER      reduce using rule 52 (statement -> func .)
    NUMBER          reduce using rule 52 (statement -> func .)
    FN              reduce using rule 52 (statement -> func .)
    RCURLYBR        reduce using rule 52 (statement -> func .)
    END             reduce using rule 52 (statement -> func .)


state 33

    (53) statement -> RETURN . expr SEMI_COLON
    (15) expr -> . expr LBRACKET expr RBRACKET
    (16) expr -> . LBRACKET clist RBRACKET
    (17) expr -> . expr QUESTION_MARK expr COLON expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GREATER_THAN expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr EQUAL expr
    (25) expr -> . expr GREATER_THAN_EQUAL expr
    (26) expr -> . expr LESS_THAN_EQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . PLUS expr
    (32) expr -> . MINUS expr
    (33) expr -> . IDENTIFIER
    (34) expr -> . IDENTIFIER ASSIGN expr
    (35) expr -> . IDENTIFIER LPAREN clist RPAREN
    (36) expr -> . NUMBER

    LBRACKET        shift and go to state 35
    NOT             shift and go to state 42
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    IDENTIFIER      shift and go to state 67
    NUMBER          shift and go to state 43

    expr                           shift and go to state 66

state 34

    (54) statement -> IF . LBRACKET expr RBRACKET stmt
    (55) statement -> IF . LBRACKET expr RBRACKET stmt ELSE stmt

    LBRACKET        shift and go to state 68


state 35

    (16) expr -> LBRACKET . clist RBRACKET
    (40) clist -> . expr
    (41) clist -> . expr COMMA clist
    (15) expr -> . expr LBRACKET expr RBRACKET
    (16) expr -> . LBRACKET clist RBRACKET
    (17) expr -> . expr QUESTION_MARK expr COLON expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr GREATER_THAN expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr EQUAL expr
    (25) expr -> . expr GREATER_THAN_EQUAL expr
    (26) expr -> . expr LESS_THAN_EQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr OR expr
    (29) expr -> . expr AND expr
    (30) expr -> . NOT expr
    (31) expr -> . PLUS expr
    (32) expr -> . MINUS expr
    (33) expr -> . IDENTIFIER
    (34) expr -> . IDENTIFIER ASSIGN expr
    (35) expr -> . IDENTIFIER LPAREN clist RPAREN
    (36) expr -> . NUMBER

    LBRACKET        shift and go to state 35
    NOT             shift and go to state 42
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    IDENTIFIER      shift and go to state 67
    NUMBER          shift and go to state 43

    clist                          shift and go to state 69
    expr                           shift and go to state 70

state 36

    (56) statement -> WHILE_LOOP . LBRACKET expr RBRACKET stmt

    LBRACKET        shift and go to state 71


state 37
